force-app/main/default/objects/Session_Module__c/Session_Module__c.object-meta.xml
<CustomObject>
    <label>Session Module</label>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>Session Module ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>