force-app/main/default/objects/Session_Module__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <formula>Module_Lesson__r.Lesson_Name__c</formula>
    <label>Lesson</label>
    <type>Text</type>
</CustomField>