force-app/main/default/objects/Session_Module__c/fields/Module_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Module_Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module Lesson</label>
    <referenceTo>Module_Lesson__c</referenceTo>
    <relationshipLabel>Session Modules</relationshipLabel>
    <relationshipName>Session_Modules1</relationshipName>
    <type>Lookup</type>
</CustomField>