force-app/main/default/objects/Session_Module__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Session Modules</relationshipLabel>
    <relationshipName>Session_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>